operation/argocd/argo-rollouts-demo/basic-service-nlb-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-northeast-2:225953240914:certificate/8ea3601a-f6ae-4fa2-b897-051a10c02d4f

spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
    nodePort: 30011
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
    nodePort: 30012
  selector:
    app: rollouts-demo
