operation/argocd/argo-rollouts-demo/ing-inter.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "rollouts-demo-ing-internal"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    # alb.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
    - host: "*.zeroest.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "rollouts-demo"
                port:
                  number: 80
